--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "cube_ai/rubiks-cube"]
+[submodule "cube_ai/rubiks_cube"]
 	path = cube_ai/rubiks_cube
 	url = https://github.com/davidkristoffersen/rubiks_cube
-	branch = master
