--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "cube_ai/rubiks_cube"]
 	path = cube_ai/rubiks_cube
 	url = https://github.com/davidkristoffersen/rubiks_cube
+	branch = master
